# generate-report

./: .gitignore  Cargo.toml  slintcn.json
.github/workflows/: ci.yaml
scripts/: i18n.py  linify.py  translations.csv
src/: main.rs
templates/Gleneagles/: Gleneagles_ENG.typ  lib.typ
templates/Gleneagles/sections/: references.typ
templates/Gleneagles_CN/: Gleneagles_CN.typ  lib.typ
templates/Gleneagles_ENG/: Gleneagles_ENG.typ  i18n.json  lib.typ
templates/Platinum_ENG/: Platinum_ENG.typ  lib.typ
templates/Platinum_ENG/at-a-glance/: at-a-glance.typ
templates/Platinum_ENG/back-cover/: back-cover.typ
templates/Platinum_ENG/commensal-keystone-bacteria/: commensal-keystone-bacteria.typ  impact.json
templates/Platinum_ENG/cover-page/: cover-page.typ
templates/Platinum_ENG/fifty-abundant-species/: fifty-abundant-species.typ
templates/Platinum_ENG/front-cover/: front-cover.typ
templates/Platinum_ENG/inflammatory-microbiome/: inflammatory-microbiome.typ  interpretations.json
templates/Platinum_ENG/intestinal-health-markers/: intestinal-health-markers.typ  marker-functions.json
templates/Platinum_ENG/microbial-ecosystem-overview/: microbial-ecosystem-overview.typ
templates/Platinum_ENG/non-bacterial-members/: impact.json  non-bacterial-members.typ
templates/Platinum_ENG/pathogen-opportunistic-bacteria/: impacts.json  pathogen-opportunistic-bacteria.typ
templates/Platinum_ENG/probiotic-bacterial-members/: impact.json  probiotic-bacterial-members.typ
templates/Platinum_ENG/scfa-producers/: scfa-producers.typ
ui/: app-window.slint
(+37 files in other folders)
