[package]
name = "generate-report"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-compat = "0.2.5"
derive_typst_intoval = "0.6.0"
include_dir = { version = "0.7.4", features = ["glob"] }
rayon = "1.12.0"
rfd = "0.17.2"
slint = "1.16.1"
tokio = { version = "1.52.3", features = ["time"] }
typst = "0.14.2"
typst-as-lib = { version = "0.15.5", features = ["packages", "reqwest", "typst-kit-embed-fonts", "typst-kit-fonts"] }
typst-pdf = "0.14.2"

[build-dependencies]
slint-build = "1.14.1"

[profile.release]
codegen-units = 1
lto = true
